02-orquestacion/playground/nwp-client-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nwp-client
  namespace: nwp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nwp-client
  template:
    metadata:
      labels:
        app: nwp-client
    spec:
      containers:
      - image: ghcr.io/carloscasalar/night-watch-planner-client:v0.3.1
        name: nwp-client
        resources:
          limits:
            cpu: 20m
            memory: 60Mi
          requests:
            cpu: 20m
            memory: 60Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
