02-orquestacion/playground/nwp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nwp-client-ingress
  namespace: nwp
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nwp-client
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nwp-optimizer-ingress
  namespace: nwp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: optimizer
            port:
              number: 3000
